--- a/matgeo-3/main.tex
+++ b/matgeo-3/main.tex
@@ -52,7 +52,7 @@ The unit vector is
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.6\linewidth]{fig.png}
+    \includegraphics[width=0.6\linewidth]{figs/fig.png}
     \caption{Unit vector $\Vec{OA}$ along $\Vec{PQ}$}
 \end{figure}
 
