--- a/matgeo-1/main.tex
+++ b/matgeo-1/main.tex
@@ -45,18 +45,18 @@ The unit direction for \emph{South} is the column matrix
 \end{bmatrix}.
 \]
 ``$30^\circ$ west of south'' means rotate the south direction \emph{towards west} by $30^\circ$.
-On the standard $(+x$ from East, counterclockwise positive$)$ angle circle, this is a
-\emph{clockwise} rotation of $30^\circ$, i.e.\ by $-30^\circ$.
+this is a
+\emph{anti-clockwise} rotation of $330^\circ$, 
 
 Hence the required unit direction column is
 \[
 \mathbf{u}
 =
-R(-30^\circ)\,\mathbf{s}
+R(330^\circ)\,\mathbf{s}
 =
 \begin{bmatrix}
-\cos 30^\circ & \;\;\sin 30^\circ\\[2pt]
--\sin 30^\circ & \cos 30^\circ
+\cos 330^\circ & \;\;-\sin 330^\circ\\[2pt]
+\sin 330^\circ & \cos 330^\circ
 \end{bmatrix}
 \begin{bmatrix}
 0\\
