--- a/matgeo-3/main.tex
+++ b/matgeo-3/main.tex
@@ -14,34 +14,34 @@
 \maketitle
 
 \section*{Question}
-Find the unit vector along $\Vec{PQ}$, where $P=(2,1,-1)$ and $Q=(4,4,-7)$.  
+Find the unit vector along $PQ$, where $\Vec{P}=(2,1,-1)$ and $\Vec{Q}=(4,4,-7)$.  
 
 
 \section*{Solution}
 
-\subsection*{Step 1: Vector $\Vec{PQ}$}
+\subsection*{Step 1: Vector $PQ$}
 The given points are
 \[
-P = \myvec{2 \\ 1 \\ -1}, 
-\quad Q = \myvec{4 \\ 4 \\ -7}.
+\Vec{P} = \myvec{2 \\ 1 \\ -1}, 
+\quad \Vec{Q} = \myvec{4 \\ 4 \\ -7}.
 \]
 Hence,
 \begin{equation}
-\Vec{PQ} = Q - P = \myvec{4 \\ 4 \\ -7} - \myvec{2 \\ 1 \\ -1}
+PQ = \Vec{Q} - \Vec{P} = \myvec{4 \\ 4 \\ -7} - \myvec{2 \\ 1 \\ -1}
 = \myvec{2 \\ 3 \\ -6}.
 \end{equation}
 
-\subsection*{Step 2: Magnitude of $\Vec{PQ}$}
+\subsection*{Step 2: Magnitude of $PQ$}
 \begin{equation}
-\|\Vec{PQ}\| = \sqrt{2^2 + 3^2 + (-6)^2}
+\|PQ\| = \sqrt{2^2 + 3^2 + (-6)^2}
 = \sqrt{4+9+36}
 = \sqrt{49} = 7.
 \end{equation}
 
-\subsection*{Step 3: Unit vector along $\Vec{PQ}$}
+\subsection*{Step 3: Unit vector along $PQ$}
 The unit vector is
 \begin{equation}
-\Vec{OA} = \frac{\Vec{PQ}}{\|\Vec{PQ}\|}
+\Vec{OA} = \frac{PQ}{\|PQ\|}
 = \frac{1}{7}\myvec{2 \\ 3 \\ -6}.
 \end{equation}
 
@@ -53,7 +53,7 @@ The unit vector is
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.6\linewidth]{figs/fig.png}
-    \caption{Unit vector $\Vec{OA}$ along $\Vec{PQ}$}
+    \caption{Unit vector $\Vec{OA}$ along $PQ$}
 \end{figure}
 
 \end{document}
