--- a/matgeo-4/main.tex
+++ b/matgeo-4/main.tex
@@ -14,67 +14,76 @@
 \maketitle
 
 \section*{Question (2.6.24)}
-Find the area of the parallelogram whose adjacent sides are given by the vectors
-$$\Vec{a} = 3\hat{i} + \hat{j} + 4\hat{k} \quad\text{and}\quad \Vec{b} = \hat{i} - \hat{j} + \hat{k}.$$
+Find the area of the parallelogram formed by the vectors
+\[
+\Vec{a} = 3\hat{i} + \hat{j} + 4\hat{k}, \qquad
+\Vec{b} = \hat{i} - \hat{j} + \hat{k}.
+\]
+Use the cross product definition.
 
 \section*{Solution}
-Consider vectors a and b
-\begin{equation}
+
+\begin{enumerate}
+\item Let
+\begin{align}
+\Vec{A} &= \myvec{a_1 \\ a_2 \\ a_3}, \\
+\Vec{B} &= \myvec{b_1 \\ b_2 \\ b_3},
+\end{align}
+and define the sub-vectors
+\begin{align}
+\Vec{A}_{ij} = \myvec{a_i \\ a_j}, \qquad
+\Vec{B}_{ij} = \myvec{b_i \\ b_j}.
+\end{align}
+
+\item The cross product of $\Vec{A}$ and $\Vec{B}$ is defined as
+\begin{align}
+\Vec{A}\times\Vec{B} =
+\myvec{
+  \mydet{\Vec{A}_{23} & \Vec{B}_{23}} \\
+  \mydet{\Vec{A}_{31} & \Vec{B}_{31}} \\
+  \mydet{\Vec{A}_{12} & \Vec{B}_{12}}
+}.
+\end{align}
+
+\item For the given vectors
+\begin{align}
 \Vec{a} = \myvec{3 \\ 1 \\ 4}, \qquad
 \Vec{b} = \myvec{1 \\ -1 \\ 1}.
-\end{equation}
+\end{align}
 
-Magnitude of $\Vec{a}$:
-\begin{equation}
-\|\Vec{a}\| = \sqrt{3^2 + 1^2 + 4^2} = \sqrt{9 + 1 + 16} = \sqrt{26}.
-\end{equation}
+\item Substituting into the definition:
+\begin{align}
+\Vec{a}\times\Vec{b} &=
+\myvec{
+\mydet{\myvec{1 \\ 4} & \myvec{-1 \\ 1}} \\
+\mydet{\myvec{4 \\ 3} & \myvec{1 \\ 1}} \\
+\mydet{\myvec{3 \\ 1} & \myvec{1 \\ -1}}
+} \\[1ex]
+&= \myvec{
+(1)(1) - (4)(-1) \\
+(4)(1) - (3)(1) \\
+(3)(-1) - (1)(1)
+} \\[1ex]
+&= \myvec{5 \\ 1 \\ -4}.
+\end{align}
 
-Magnitude of $\Vec{b}$:
-\begin{equation}
-\|\Vec{b}\| = \sqrt{1^2 + (-1)^2 + 1^2} = \sqrt{1 + 1 + 1} = \sqrt{3}.
-\end{equation}
-
-Dot product $\Vec{a}\cdot\Vec{b}$ (to get $\cos\theta$):
-\begin{equation}
-\Vec{a}\cdot\Vec{b} = 
-\begin{pmatrix}3 & 1 & 4\end{pmatrix}
-\begin{pmatrix}1 \\ -1 \\ 1\end{pmatrix}
-= 3\cdot 1 + 1\cdot(-1) + 4\cdot 1 = 3 - 1 + 4 = 6.
-\end{equation}
-
-Cosine of the angle:
-\begin{equation}
-\cos\theta = \dfrac{\Vec{a}\cdot\Vec{b}}{\|\Vec{a}\|\,\|\Vec{b}\|}
-= \dfrac{6}{\sqrt{26}\,\sqrt{3}} = \dfrac{6}{\sqrt{78}}.
-\end{equation}
-
-Sine of the angle (use $ \sin\theta = \sqrt{1-\cos^2\theta}$):
-\begin{equation}
-\sin\theta = \sqrt{1 - \left(\dfrac{6}{\sqrt{78}}\right)^{\!2}}
-= \sqrt{1 - \dfrac{36}{78}}
-= \sqrt{\dfrac{78 - 36}{78}}
-= \sqrt{\dfrac{42}{78}}
-= \sqrt{\dfrac{7}{13}}.
-\end{equation}
-
-Area of parallelogram $= \|\Vec{a}\|\,\|\Vec{b}\|\,\sin\theta$:
-\begin{equation}
-\text{Area} = \sqrt{26}\,\sqrt{3}\,\sqrt{\dfrac{7}{13}}
-= \sqrt{ \dfrac{26\cdot 3 \cdot 7}{13} }
-= \sqrt{ \dfrac{26}{13}\cdot 21 }
-= \sqrt{2 \cdot 21}
+\item Area of the parallelogram is
+\begin{align}
+\text{Area} = \|\Vec{a}\times\Vec{b}\|
+= \sqrt{5^2 + 1^2 + (-4)^2}
 = \sqrt{42}.
-\end{equation}
+\end{align}
+\end{enumerate}
 
 \section*{Final Answer}
-\begin{equation}
-\boxed{\text{Area} = 6.4807}
-\end{equation}
+\[
+\boxed{\text{Area} = \sqrt{42}}
+\]
 
 \begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.6\linewidth]{figs/fig.png}
-    \caption{Parallelogram spanned by $\Vec{a}$ and $\Vec{b}$ }
+\centering
+\includegraphics[width=0.6\linewidth]{figs/fig.png}
+\caption{Parallelogram spanned by $\Vec{a}$ and $\Vec{b}$.}
 \end{figure}
 
 \end{document}
