--- a/matgeo-5/BEAMER/main_slides.tex
+++ b/matgeo-5/BEAMER/main_slides.tex
@@ -117,15 +117,21 @@ int main() {
 import numpy as np
 import matplotlib.pyplot as plt
 from mpl_toolkits.mplot3d.art3d import Poly3DCollection
+import ctypes
 
-# Vertices
-A = np.array([1, -1, 2])
-B = np.array([2, 0, -1])
-C = np.array([3, -1, 2]) 
+# #Run the C code to generate var.dat
+# dll = ctypes.CDLL("./get_coordinates.so")
+# dll.get_coordinates()
+
+# Read arrays from var.dat
+with open("var.dat", "r") as f:
+	lines = f.readlines()
+	A = np.array([int(x) for x in lines[0].split()])
+	B = np.array([int(x) for x in lines[1].split()])
+	C = np.array([int(x) for x in lines[2].split()])
 
 AB = B - A
 AC = C - A
-
 # Area calculation
 area = 0.5 * np.linalg.norm(np.cross(AB, AC))
 print("Area of triangle ABC:", area)
@@ -136,7 +142,6 @@ ax = fig.add_subplot(111, projection='3d')
 
 # Triangle vertices
 triangle = np.array([A, B, C])
-
 \end{lstlisting}
 \end{frame}
 
