--- a/matgeo-8/BEAMER/main_slides.tex
+++ b/matgeo-8/BEAMER/main_slides.tex
@@ -1,144 +1,109 @@
-\documentclass{beamer}
+
+\documentclass[12pt]{beamer}
+\usetheme{Madrid}
+\usecolortheme{seahorse}
+
 \usepackage{amsmath,amssymb}
 \usepackage{graphicx}
 \usepackage{siunitx}
 \sisetup{per-mode=symbol}
 \usepackage{gvv}
-\usepackage{listings}
-\usepackage{xcolor}
-
-% Code style
-\lstset{
-  basicstyle=\ttfamily\scriptsize,
-  breaklines=true,
-  frame=single,
-  numbers=left,
-  numberstyle=\tiny,
-  keywordstyle=\color{blue},
-  commentstyle=\color{green!50!black},
-  stringstyle=\color{red!60!black},
-  showstringspaces=false
-}
 
 \title{Matrix 4.8.11}
 \author{ai25btech11015 -- M Sai Rithik}
 \date{}
 
 \begin{document}
+\maketitle
 
-\frame{\titlepage}
-
-\begin{frame}
-\frametitle{Question}
+%-------------------------
+\begin{frame}{Question}
 Find the vector equation of the plane determined by the points
 \[
 A(3,-1,2),\quad B(5,2,4),\quad C(-1,-1,6),
 \]
-and hence find the distance of this plane from the origin.  
-
+and hence find the distance of this plane from the origin.
 \end{frame}
 
-\begin{frame}
-\frametitle{Step 1: Position vectors}
-\begin{equation}
-\Vec{A} = \myvec{3 \\ -1 \\ 2},\quad
-\Vec{B} = \myvec{5 \\ 2 \\ 4},\quad
-\Vec{C} = \myvec{-1 \\ -1 \\ 6}.
-\end{equation}
-\pause
-\begin{equation}
-\Vec{B}-\Vec{A} = \myvec{2 \\ 3 \\ 2},\quad
-\Vec{C}-\Vec{A} = \myvec{-4 \\ 0 \\ 4}.
-\end{equation}
+%-------------------------
+\begin{frame}{Step 1: Position vectors}
+\[
+\Vec{A} = \myvec{3\\-1\\2},\quad
+\Vec{B} = \myvec{5\\2\\4},\quad
+\Vec{C} = \myvec{-1\\-1\\6}.
+\]
 \end{frame}
 
-\begin{frame}
-\frametitle{Step 2: Normal via cross product}
-\begin{equation}
-(\Vec{B}-\Vec{A}) \times (\Vec{C}-\Vec{A})
-= \myvec{
-  \mydet{\myvec{3\\2} & \myvec{0\\4}} \\[1ex]
-  \mydet{\myvec{2\\2} & \myvec{-4\\4}} \\[1ex]
-  \mydet{\myvec{2\\3} & \myvec{-4\\0}}
-}.
-\end{equation}
-\pause
-\begin{equation}
-= \myvec{12 \\ 16 \\ 12}.
-\end{equation}
-\pause
-Simplify by dividing through $4$:
-\begin{equation}
-\Vec{N} = \myvec{3 \\ -4 \\ 3}.
-\end{equation}
+%-------------------------
+\begin{frame}{Step 2: Plane form}
+We write the plane in normalized form:
+\[
+\mathbf{N}^{\!\top} x = 1,
+\]
+where \(\mathbf{N} = \myvec{n_1\\n_2\\n_3}\).
+
+Since \(A,B,C\) lie on the plane:
+\[
+\mathbf{N}^{\!\top}\Vec{A} = 1,\;
+\mathbf{N}^{\!\top}\Vec{B} = 1,\;
+\mathbf{N}^{\!\top}\Vec{C} = 1.
+\]
 \end{frame}
 
-\begin{frame}
-\frametitle{Step 3: Finding place Eqn}
-Using $\Vec{A}$:
-\begin{equation}
-d = \Vec{N}^{\!\top}\Vec{A}
-= \begin{pmatrix}3 & -4 & 3\end{pmatrix}\myvec{3\\-1\\2}.
-\end{equation}
-\pause
-\begin{equation}
-d = 9 + 4 + 6 = 19.
-\end{equation}
-\pause
-Equation of plane:
-\begin{equation}
-\Vec{N}^{\!\top}x = 19.
-\end{equation}
+%-------------------------
+\begin{frame}{Step 3: Linear system}
+This gives the system
+\[
+\begin{bmatrix}
+3 & -1 & 2\\
+5 & 2 & 4\\
+-1 & -1 & 6
+\end{bmatrix}
+\myvec{n_1\\n_2\\n_3}
+=
+\myvec{1\\1\\1}.
+\]
+
+Or in augmented form:
+\[
+\left[
+\begin{array}{ccc|c}
+3 & -1 & 2 & 1\\
+5 & 2 & 4 & 1\\
+-1 & -1 & 6 & 1
+\end{array}
+\right].
+\]
 \end{frame}
 
-\begin{frame}
-\frametitle{Step 4: Normalize to $N^\top x = 1$}
-\begin{equation}
-\widetilde{\Vec{N}} = \frac{1}{19}\Vec{N}
-= \myvec{\tfrac{3}{19}\\[4pt]-\tfrac{4}{19}\\[4pt]\tfrac{3}{19}}.
-\end{equation}
-\pause
-\begin{equation}
-\boxed{\;\widetilde{\Vec{N}}^{\!\top} x = 1\;}
-\end{equation}
+%-------------------------
+\begin{frame}{Step 4: Solution}
+Row reducing, we obtain
+\[
+\mathbf{N} = \myvec{\tfrac{1}{19}\\[6pt]-\tfrac{5}{57}\\[6pt]\tfrac{3}{19}}.
+\]
+
+Hence the plane equation is
+\[
+\frac{1}{19}x - \frac{5}{57}y + \frac{3}{19}z = 1.
+\]
 \end{frame}
 
-\begin{frame}
-\frametitle{Step 5: Distance from origin}
-For $\widetilde{\Vec{N}}^{\!\top}x = 1$:
-\begin{equation}
-D = \frac{|1|}{\|\widetilde{\Vec{N}}\|}.
-\end{equation}
-\pause
-\begin{equation}
-\|\Vec{N}\| = \sqrt{3^2+(-4)^2+3^2} = \sqrt{34}.
-\end{equation}
-\pause
-\begin{equation}
-\|\widetilde{\Vec{N}}\| = \frac{\|\Vec{N}\|}{19}.
-\end{equation}
-\pause
-\begin{equation}
-D = \frac{19}{\sqrt{34}} \approx 3.260.
-\end{equation}
-\end{frame}
+%-------------------------
+\begin{frame}{Step 5: Distance from origin}
+Distance of origin \((0,0,0)\) from the plane
+\[
+\mathbf{N}^{\!\top}x = 1
+\]
+is
+\[
+d = \frac{|\,1\,|}{\|\mathbf{N}\|}
+= \frac{1}{\sqrt{\left(\tfrac{1}{19}\right)^2 + \left(-\tfrac{5}{57}\right)^2 + \left(\tfrac{3}{19}\right)^2}}.
+\]
 
-\begin{frame}
-\frametitle{Final Answer}
-\begin{equation}
-\boxed{\;\widetilde{\Vec{N}}^{\!\top}x = 1,\quad
-\widetilde{\Vec{N}} = \myvec{\tfrac{3}{19}\\[4pt]-\tfrac{4}{19}\\[4pt]\tfrac{3}{19}}}
-\end{equation}
-\begin{equation}
-\boxed{\;D = \tfrac{19}{\sqrt{34}} \;\approx 3.260\;}
-\end{equation}
-\end{frame}
-\begin{frame}
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.65\linewidth]{figs/fig.png}
-    \caption{}
-\end{figure}
+\[
+d = \frac{57}{\sqrt{187}}.
+\]
 \end{frame}
 
 \end{document}
