--- a/matgeo-10/BEAMER/main_slides.tex
+++ b/matgeo-10/BEAMER/main_slides.tex
@@ -1,7 +1,12 @@
 \documentclass{beamer}
-\usetheme{Boadilla}
+\usetheme{Madrid}
+\usecolortheme{default}
 
+% Packages
 \usepackage{amsmath,amssymb}
+\usepackage{graphicx}
+\usepackage{siunitx}
+\sisetup{per-mode=symbol}
 \usepackage{gvv}
 \usepackage{listings}
 \usepackage{xcolor}
@@ -19,90 +24,105 @@
   showstringspaces=false
 }
 
-\title{4.13.84}
+\title{Matrix 4.13.84}
 \author{ai25btech11015 -- M Sai Rithik}
 \date{}
 
 \begin{document}
+\maketitle
 
-\frame{\titlepage}
-
-% --- Question ---
+% Question
 \begin{frame}
-\frametitle{Question}
+\frametitle{Question (4.13.84)}
 Find the value of \(k\) such that the line
 \[
-\frac{x-4}{1} = \frac{y-2}{1} = \frac{z-k}{2}
+\frac{x-4}{1}=\frac{y-2}{1}=\frac{z-k}{2}
 \]
 lies in the plane
 \[
-2x - 4y + z = 7
+2x-4y+z=7.
 \]
 \end{frame}
 
-% --- Step 1: Parametric Line ---
+% Parametric form
 \begin{frame}
-\frametitle{Step 1: Parametric Form of Line}
-Let the line parameter be \(t\):
+\frametitle{Parametric Form of Line}
+The line can be written as
 \[
-\begin{aligned}
-x &= 4 + t,\\
-y &= 2 + t,\\
-z &= k + 2t.
-\end{aligned}
+\Vec{r}(t) = \myvec{x\\y\\z} = \Vec{p} + t\,\Vec{v},
+\]
+where
+\[
+\Vec{p} = \myvec{4\\2\\k}, \quad 
+\Vec{v} = \myvec{1\\1\\2}.
 \]
 
-Matrix form:
+The plane can be written as
 \[
-\Vec{r}(t) = \myvec{4\\2\\k} + t \myvec{1\\1\\2}.
+\Vec{n}^T \Vec{r} = 7,
+\quad \Vec{n} = \myvec{2\\-4\\1}.
 \]
 \end{frame}
 
-% --- Step 2: Plane Equation in Matrix Form ---
+% Conditions
 \begin{frame}
-\frametitle{Step 2: Plane in Matrix Form}
-Plane equation:
+\frametitle{Conditions for Line in Plane}
+Substituting, we get
 \[
-2x - 4y + z = 7
+\Vec{n}^T(\Vec{p} + t \Vec{v}) = 7,
+\]
+\[
+\Vec{n}^T \Vec{p} + t\,\Vec{n}^T \Vec{v} = 7.
 \]
 
-Normal vector:
+For this to hold for all \(t\):
+\begin{align}
+\Vec{n}^T \Vec{v} &= 0, \\
+\Vec{n}^T \Vec{p} &= 7.
+\end{align}
+\end{frame}
+
+% Step 1 calculation
+\begin{frame}
+\frametitle{Step 1: Direction Condition}
 \[
-\Vec{n} = \myvec{2\\-4\\1}.
+\Vec{n}^T \Vec{v}
+= \begin{bmatrix}2 & -4 & 1\end{bmatrix}
+\myvec{1\\1\\2}
+= 2(1) + (-4)(1) + 1(2) = 0.
 \]
 
-Substitute line into plane:
+Thus, the condition is satisfied automatically.
+\end{frame}
+
+% Step 2 calculation
+\begin{frame}
+\frametitle{Step 2: Point Condition}
 \[
-\Vec{n}^T \Vec{r}(t) = \Vec{n}^T \myvec{4\\2\\k} + \Vec{n}^T \myvec{1\\1\\2} t = 7
+\Vec{n}^T \Vec{p}
+= \begin{bmatrix}2 & -4 & 1\end{bmatrix}
+\myvec{4\\2\\k}
+= 8 - 8 + k = k.
+\]
+
+Equating,
+\[
+k = 7.
 \]
 \end{frame}
 
-% --- Step 3: Multiply Matrices ---
+% Final Answer
 \begin{frame}
-\frametitle{Step 3: Multiply Matrices}
-\[
-\underbrace{\myvec{2 & -4 & 1}\myvec{1\\1\\2}}_{0} t
-+
-\underbrace{\myvec{2 & -4 & 1}\myvec{4\\2\\k}}_{k} = 7
-\]
-
-\[
-0\cdot t + k = 7
-\]
-\end{frame}
-
-% --- Step 4: Solve for k ---
-\begin{frame}
-\frametitle{Step 4: Solve for \(k\)}
-\[
-k = 7
-\]
-
-\section*{Answer}
+\frametitle{Final Answer}
 \[
 \boxed{k = 7}
 \]
-\end{frame}
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.65\linewidth]{figs/fig.png}
+    \caption{Line lying in the plane}
+\end{figure}
+\end{frame}
 
 \end{document}
